<resources>
    <string name="app_name">Text Recognizer</string>
    <string name="result">Result</string>
    <string name="select_image">Select image</string>
    <string name="processing_image">Processing image…</string>
    <string name="open_the_camera">Open the camera</string>
    <string name="open_the_gallery">Open the gallery</string>
    <string name="recognize_text_button">Recognize text button</string>
    <string name="text_ocupied">Text ocupied</string>
    <string name="image_to_be_processed">Image to be processed</string>
    <string name="saved_text">Saved text</string>
    <string name="save_recogized_text_to_a_txt_file">Save recogized text to a txt file</string>
    <string name="copy_text">Copy text</string>
</resources>