<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gutotech.textrecognizer.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/select_image"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/blue" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/open_the_gallery"
                            android:onClick="openGallery"
                            app:srcCompat="@drawable/ic_photo_library_24dp" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:contentDescription="@string/open_the_camera"
                            android:onClick="openCamera"
                            app:srcCompat="@drawable/ic_photo_camera_24dp" />
                    </LinearLayout>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="2dp"
                        android:background="?android:attr/listDivider" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_to_be_processed" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/result"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />

                        <ImageButton
                            android:id="@+id/saveImageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/save_recogized_text_to_a_txt_file"
                            android:enabled="@{viewModel.recognizedText.isEmpty()? false : true}"
                            android:onClick="save"
                            app:srcCompat="@drawable/selector_save_button" />

                        <ImageButton
                            android:id="@+id/recognizeTextImageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/recognize_text_button"
                            android:enabled="@{viewModel.bitmap == null? false : true}"
                            android:onClick="@{() -> viewModel.recognizeText()}"
                            app:srcCompat="@drawable/selector_process_image_button" />
                    </LinearLayout>

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/resultEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="@string/result"
                            android:background="@color/blue"
                            android:enabled="@{viewModel.editMode}"
                            android:inputType="textMultiLine"
                            android:padding="3dp"
                            android:text="@={viewModel.recognizedText}"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </ScrollView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="5dp">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/copy_text"
                            android:onClick="copy"
                            app:srcCompat="@drawable/ic_content_copy_white_24dp" />

                        <ImageButton
                            android:id="@+id/editImageButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@{viewModel.editMode ? @drawable/ic_mode_edit_24dp : @drawable/ic_mode_edit_gray_24dp}"
                            android:onClick="@{() -> viewModel.changeEditMode()}" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>